[package]
name = "moanmyip_client"
version = "0.1.0"
authors = ["Vojtěch Jungmann <vojta.jungmann@gmail.com>"]
edition = "2021"

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"], default-features = false }
surf = { version = "2.3.1", features = ["h1-client"], default-features = false }
rodio = { version = "0.14.0", features = ["wav"], default-features = false }
clap = "3.0.0-beta.5"
url = "2.2.2"